// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService should return a token when user log-in 1`] = `
{
  "data": {
    "token": "123.123.123",
  },
  "errors": null,
}
`;

exports[`AuthService should return an user when register 1`] = `
{
  "data": {
    "email": "teste@email.com",
    "name": "Ana",
    "password": "123",
  },
  "errors": null,
}
`;
